<resources>
    <string name="app_name">InventoryApp</string>
    <string name="empty_view_title_text">There are no books so far</string>
    <string name="empty_view_subtitle_text">Add new item</string>
    <string name="action_save">Save</string>
    <string name="product_name">Product Name</string>
    <string name="sample_product_name">Book Name</string>
    <string name="hint_price">Price</string>
    <string name="product_price">Product Price</string>
    <string name="product_quantity">Remaining</string>
    <string name="hint_Quantity">Items left</string>
    <string name="product_add_item">Add item</string>
    <string name="product_delete_item">Delete item</string>
    <string name="product_order_some_more">Order</string>
    <string name="name_validation">Book requires a name</string>
    <string name="summary_messages">Price is %1$d dollars! There are %2$d item left.</string>
    <string name="editor_activity_title_new_book">New Book</string>
    <string name="editor_activity_title_edit_book">Edit Book</string>
    <string name="editor_insert_book_failed">insertion failed</string>
    <string name="editor_insert_book_successful">insertion successful</string>
    <string name="editor_update_book_failed">update failed</string>
    <string name="editor_update_book_successful">update successful</string>
    <string name="unsaved_changes_dialog_msg">Your changes were unsaved</string>
    <string name="discard">Discard changes</string>
    <string name="keep_editing">Go on editing</string>
    <string name="delete_dialog_msg">Delete the item?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="editor_delete_pet_failed">The book was not deleted</string>
    <string name="editor_delete_pet_successful">The book was deleted</string>
    <string name="error_update">Update unsuccessful</string>
    <string name="product_delete_all">Delete</string>
    <string name="button_plus">+</string>
    <string name="button_minus">-</string>
    <string name="invalid_number">Invalid Number</string>
    <string name="load_pic">Load Picture</string>
    <string name="text_for_buy_button">SALE</string>
    <string name="no_pic_loaded">You have not loaded an image, you can always do it later</string>
    <string name="editor_delete_book_failed">The book could not be deleted</string>
    <string name="editor_delete_book_successful">The book was deleted</string>
    <string name="editor_activity_title_details">Details</string>
    <string name="no_name">I can not save a book without a name</string>
    <string name="no_price">You have not entered a price, the book not saved</string>
    <string name="no_quantity">You have not entered the quantity, the book not saved</string>
    <string name="no_pic">You have not loaded a picture, the pet not saved</string>
    <string name="order_subject">Order more items of a book:</string>
    <string name="order_body">"I would like to order 50 more copies of "</string>
</resources>
